force-app/main/default/objects/Color_Scheme_Item__c/Color_Scheme_Item__c.object-meta.xml
<CustomObject>
    <description>A row of the color scheme containing a color and the temperature range it represents</description>
    <label>Color Scheme Item</label>
    <nameField>
        <label>Color Scheme Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Color Scheme Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>