force-app/main/default/objects/Color_Scheme_Item__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <defaultValue>&quot;000000&quot;</defaultValue>
    <description>Hex Code of the Color that this Color Scheme Item represents</description>
    <inlineHelpText>Hex Code of the Color that this Color Scheme Item represents</inlineHelpText>
    <label>Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>