force-app/main/default/objects/Color_Scheme_Item__c/fields/Color_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Color_Scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Color Scheme that this Item comprises</description>
    <inlineHelpText>Color Scheme that this Item comprises</inlineHelpText>
    <label>Color Scheme</label>
    <referenceTo>Color_Scheme__c</referenceTo>
    <relationshipLabel>Color Scheme Items</relationshipLabel>
    <relationshipName>Color_Scheme_Items</relationshipName>
    <type>Lookup</type>
</CustomField>