force-app/main/default/objects/Color_Scheme_Item__c/fields/Max_Temp__c.field-meta.xml
<CustomField>
    <fullName>Max_Temp__c</fullName>
    <description>Max Temp that this Color Scheme Items</description>
    <inlineHelpText>Max Temp that this Color Scheme Items</inlineHelpText>
    <label>Max Temp</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>