force-app/main/default/objects/Color_Scheme_Item__c/fields/Min_Temp__c.field-meta.xml
<CustomField>
    <fullName>Min_Temp__c</fullName>
    <description>Min Temp that this Color Scheme Item Represents</description>
    <inlineHelpText>Min Temp that this Color Scheme Item Represents</inlineHelpText>
    <label>Min Temp</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>